--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">Вітаю тебе з Днем народження!</div>
+    <div class="title">NolfNeo, вітаю тебе з Днем народження!</div>
 
     <div class="emojis">
       ✨🎈🎉🎉🎈🎊🎉 ✨🎈
@@ -99,4 +99,5 @@
     </p>
   </div>
 </body>
+
 </html>
